--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="fb:682743119612179" content="682743119612179" />.
-    <title>Inst</title>
-</head>
-<body>
-    <h1>Тест Instagram API</h1>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta property="fb:682743119612179" content="682743119612179" />
+        .
+        <title>Inst</title>
+    </head>
+    <body>
+        <h1>Тест Instagram API</h1>
+    </body>
 </html>
