--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta property="fb:682743119612179" content="682743119612179" />
-        .
-        <title>Inst</title>
+        <script src="https://raw.githubusercontent.com/NextNextDev/insta_search/main/1.js"></script>
+        <script src="https://raw.githubusercontent.com/NextNextDev/insta_search/main/2.js"></script>
     </head>
     <body>
-        <h1>Тест Instagram API</h1>
+        <h1>Hellow World</h1>
     </body>
 </html>
